# claudia2

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  claudia2  dev.mjs  install.sh  package-lock.json  package.json  sdk-bridge-v2.mjs  tsconfig.json
.claude/: settings.json
.github/workflows/: release.yml  test.yml
context/: context-map.d.mts  context-map.mjs  engine.mjs  setup-zep-instructions.mjs  zep-loop.bundle.mjs  zep-loop.mjs
docs/: architecture.md  external-prompt-api.md  feature-spec-project-picker.md  troubleshooting.md
scripts/: archive.sh  bugtime.sh  bump-version.sh  claudia-prompt  collect-debug-logs.sh  generate-update-manifest.js  glm-shim.mjs  run-claudia-debug.sh  run-e2e.sh  run.sh
scripts/manual/: README.md  test-bridge-interrupt.mjs  test-respawn.mjs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: claude_process.rs  config.rs  events.rs  lib.rs  llm_reviewer.rs  main.rs  streaming.rs
src-tauri/src/commands/: bot_config.rs  directory_cmd.rs  external_session.rs  messaging.rs  mod.rs  permission.rs  secure_ipc.rs  session.rs  session_list.rs  session_names.rs
src/__tests__/: background-response.test.ts  context-map.test.ts  context-utils.test.ts  highlight.test.ts  json-streamer.test.ts  useLocalCommands.test.ts  useSidebar.test.ts
src/components/: CommandInput.tsx  MessageContent.tsx  PlanViewer.tsx  QuestionPanel.tsx  SettingsModal.tsx  ToolResult.tsx  UpdateBanner.css
src/hooks/: useLocalCommands.ts  usePermissions.ts  useSession.ts  useSettings.ts  useSidebar.ts
src/lib/: background-response.ts  claude-event-normalizer.ts  context-utils.ts  (+4 more)
(+10 files in other folders)
