[package]
name = "claudia"
version = "0.4.8"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "claudia_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-cli = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "process", "sync", "io-util"] }
futures = "0.3"
dirs = "5"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
plist = "1"
tauri-plugin-window-state = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
libc = "0.2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
regex = "1"
# WebDriver plugin for E2E testing — only initialized in debug builds (see lib.rs)
tauri-plugin-webdriver = "0.2"

# macOS-specific dependencies for native window focus control
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSRunningApplication"] }
objc2-foundation = "0.3"

[dev-dependencies]
tempfile = "3"
